5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_1276.log
== TEST (2019-06-25 15:59:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for i in range(size(vet)):
	for j in range(7):
		vet[i]+=mat[j,i]
		

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:59:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for i in range(size(vet)):
	for j in range(7):
		vet[i]+=mat[j,i]
		

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:00:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for i in range(7):
	for j in range(range(size(vet))):
		vet[i]+=mat[j,i]
		

print(max(vet))
-- EXECUTION TIME:
1.0224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1276/main.py", line 13, in <module>
    for j in range(range(size(vet))):
TypeError: 'range' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:00:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for i in range(7):
	for j in range(range(size(vet))):
		vet[i]+=mat[j,i]
		

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:01:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for i in range(7):
	for j in range(size(vet)):
		vet[i]+=mat[j,i]
		

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:05:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:10:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet))
		aux=i
print(aux)
-- ERROR:
File "XXXX", line 18
    if(vet[i]==max(vet))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:10:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		aux=i
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:15:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:16:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:16:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:16:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:17:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)

for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:18:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)

for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:18:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)

for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:19:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:20:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)

aux=1
for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:21:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:22:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:22:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[0],dtype=int)


for j in range(7):
	for i in range(size(vet)):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:23:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:25:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[1]):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:25:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:25:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[i]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:26:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j]+=mat[i,j]
		

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:28:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:28:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:28:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Doigote: ")))




vet = zeros(shape(mat)[1],dtype=int)


for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j]+=mat[i,j]
		

for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.929217
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
